--- a/packages/mcp-github-project-manager/package.json
+++ b/packages/mcp-github-project-manager/package.json
@@ -9,12 +9,15 @@
     "github-project-manager": "dist/server/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "prebuild": "rimraf dist",
+    "build": "tsc && npm run copy-env",
+    "copy-env": "node scripts/copy-env-to-dist.js",
     "dev": "ts-node --esm src/index.ts",
     "start": "node dist/index.js",
     "lint": "npx tsc --noEmit",
     "example": "node scripts/run-example.js",
-    "setup": "node scripts/setup.js"
+    "setup": "node scripts/setup.js",
+    "generate-env": "node scripts/generate-env.js"
   },
   "keywords": [
     "mcp",
@@ -32,6 +35,7 @@
     "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -42,4 +46,4 @@
     "dotenv": "^16.3.1",
     "zod": "^3.22.4"
   }
-} 
+}
