chore: Rename package to @monsoft/model-context-protocols

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monsoft-mcps",
+  "name": "@monsoft/model-context-protocols",
   "private": true,
   "scripts": {
     "build": "turbo run build",
