--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "@monsoft/model-context-protocols",
-  "author": "Monsoft Solutions, LLC (https://monsoftsolutions.com)",
-  "description": "Contains Model Context Protocols developed by Monsoft Solutions",
-  "private": true,
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types",
-    "changeset": "changeset",
-    "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish"
-  },
-  "devDependencies": {
-    "@changesets/cli": "^2.28.1",
-    "prettier": "^3.5.3",
-    "turbo": "^2.4.4",
-    "typescript": "5.8.2"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "npm@10.9.2",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+    "name": "@monsoft/model-context-protocols",
+    "author": "Monsoft Solutions, LLC (https://monsoftsolutions.com)",
+    "description": "Contains Model Context Protocols developed by Monsoft Solutions",
+    "private": true,
+    "scripts": {
+        "build": "turbo run build",
+        "dev": "turbo run dev",
+        "lint": "turbo run lint",
+        "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+        "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
+        "check-types": "turbo run check-types",
+        "changeset": "changeset",
+        "version-packages": "changeset version",
+        "release": "turbo run build && changeset publish"
+    },
+    "devDependencies": {
+        "@changesets/cli": "^2.28.1",
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.5.3",
+        "turbo": "^2.4.4",
+        "typescript": "5.8.2"
+    },
+    "engines": {
+        "node": ">=18"
+    },
+    "packageManager": "npm@10.9.2",
+    "workspaces": [
+        "apps/*",
+        "packages/*"
+    ],
+    "lint-staged": {
+        "*.{ts,tsx,js,jsx,md}": "prettier --write"
+    }
 }
