--- a/packages/mcp-eraser-diagram/tsconfig.json
+++ b/packages/mcp-eraser-diagram/tsconfig.json
@@ -1,12 +1,18 @@
 {
     "compilerOptions": {
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "declaration": true,
-        "esModuleInterop": true,
+        "target": "ES2020",
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
-        "target": "ES2020"
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
+
+        "skipLibCheck": true,
+        "declaration": true,
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
