--- a/packages/mcp-github-project-manager/tsconfig.json
+++ b/packages/mcp-github-project-manager/tsconfig.json
@@ -4,12 +4,16 @@
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "esModuleInterop": true,
-        "outDir": "./dist",
+        "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "declaration": true,
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
+
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "declaration": true,
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "**/*.test.ts"]
+    "exclude": ["node_modules", "dist"]
 }
