--- a/packages/mcp-github-project-manager/tsconfig.json
+++ b/packages/mcp-github-project-manager/tsconfig.json
@@ -1,19 +1,8 @@
 {
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "target": "ES2020",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "noImplicitAny": true,
-        "noUnusedLocals": true,
-
-        "skipLibCheck": true,
-        "declaration": true,
         "outDir": "./dist",
-        "rootDir": "./src"
+        "rootDir": "."
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"]
+    "include": ["./**/*.ts"]
 }
