chore(eslint): Update ESLint configuration and refactor error handling
- Added a new .eslintrc.cjs file for ESLint configuration with TypeScript support.
- Removed the old .eslintrc.js file.
- Updated lint script in package.json to use the new ESLint configuration.
- Introduced a GitHubError type for improved error handling in GitHub services.
- Refactored error handling in GitHub services to utilize the new GitHubError type.
- Enhanced issue and pull request services to ensure proper error type casting.

--- a/packages/mcp-github-project-manager/package.json
+++ b/packages/mcp-github-project-manager/package.json
@@ -16,7 +16,7 @@
     "build": "tsc",
     "validate": "tsc --noEmit && npm run lint",
     "test": "jest",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src --ext .ts --config .eslintrc.cjs",
     "example": "node scripts/run-example.js"
   },
   "keywords": [
