--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "devDependencies": {
         "@changesets/cli": "^2.28.1",
+        "@types/express": "^5.0.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "prettier": "^3.5.3",
@@ -32,5 +33,8 @@
     ],
     "lint-staged": {
         "*.{ts,tsx,js,jsx,md}": "prettier --write"
+    },
+    "dependencies": {
+        "express": "^5.0.1"
     }
 }
