--- a/packages/mcp-slack/package.json
+++ b/packages/mcp-slack/package.json
@@ -1,29 +1,35 @@
 {
-    "name": "@modelcontextprotocol/server-slack",
-    "version": "0.6.2",
-    "description": "MCP server for interacting with Slack",
-    "license": "MIT",
-    "author": "Anthropic, PBC (https://anthropic.com)",
-    "homepage": "https://modelcontextprotocol.io",
-    "bugs": "https://github.com/modelcontextprotocol/servers/issues",
-    "type": "module",
-    "bin": {
-      "mcp-server-slack": "dist/index.js"
-    },
-    "files": [
-      "dist"
-    ],
-    "scripts": {
-      "build": "tsc && shx chmod +x dist/*.js",
-      "prepare": "npm run build",
-      "watch": "tsc --watch"
-    },
-    "dependencies": {
-      "@modelcontextprotocol/sdk": "1.0.1"
-    },
-    "devDependencies": {
-      "@types/node": "^22",
-      "shx": "^0.3.4",
-      "typescript": "^5.6.2"
-    }
+  "name": "@monsoft/mcp-slack",
+  "version": "0.1.0",
+  "description": "Slack MCP Server for Model Context Protocol",
+  "license": "MIT",
+  "author": "Monsoft Solutions (https://monsoftsolutions.com)",
+  "homepage": "https://github.com/monsoft-solutions/model-context-protocols",
+  "bugs": "https://github.com/monsoft-solutions/model-context-protocols/issues",
+  "type": "module",
+  "bin": {
+    "mcp-slack": "dist/index.js"
+  },
+  "files": ["dist"],
+  "scripts": {
+    "build": "tsc && shx chmod +x dist/*.js",
+    "start": "npm run build && node dist/index.js",
+    "prepare": "npm run build",
+    "watch": "tsc --watch",
+    "validate": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.7.0",
+    "@slack/web-api": "^6.9.0",
+    "@types/node": "^22",
+    "express": "^4.18.2",
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.23.5",
+    "yargs": "^17.7.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.2",
+    "shx": "^0.3.4",
+    "@types/express": "^4.17.21"
   }
+} 
