--- a/packages/mcp-slack/package.json
+++ b/packages/mcp-slack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monsoft/mcp-slack",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Slack MCP Server for Model Context Protocol",
   "license": "MIT",
   "author": "Monsoft Solutions (https://monsoftsolutions.com)",
@@ -10,7 +10,9 @@
   "bin": {
     "mcp-slack": "dist/index.js"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc && shx chmod +x dist/*.js",
     "start": "npm run build && node dist/index.js",
@@ -32,4 +34,4 @@
     "shx": "^0.3.4",
     "@types/express": "^4.17.21"
   }
-} 
+}
