RELEASING: Releasing 1 package(s)
Releases:
  @monsoft/mcp-postgres@0.1.0

[skip ci]

--- a/packages/mcp-postgres/package.json
+++ b/packages/mcp-postgres/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monsoft/mcp-postgres",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "MCP server for postgres database interactions",
   "license": "MIT",
   "author": "Monsoft Solutions (https://monsoftsolutions.com)",
@@ -23,14 +23,13 @@
     "@modelcontextprotocol/sdk": "^1.7.0",
     "@types/node": "^22",
     "express": "^4.18.2",
-    "pg": "^8.11.3",
+    "postgres": "^3.4.5",
     "yargs": "^17.7.2",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/pg": "^8.10.9",
     "shx": "^0.3.4",
     "typescript": "^5.8.3"
   }
