--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "*.{ts,tsx,js,jsx,md}": "prettier --write"
     },
     "dependencies": {
-        "express": "^5.0.1"
+        "express": "^5.0.1",
+        "postgres": "^3.4.5"
     }
 }
