docs(changeset): use the v2 of GitHub api to handle the projects

--- a/packages/mcp-github-project-manager/package.json
+++ b/packages/mcp-github-project-manager/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
+    "@octokit/graphql": "^7.0.2",
     "@octokit/rest": "^20.0.2",
     "shx": "^0.4.0",
     "yargs": "^17.7.2",
