--- a/packages/mcp-generate-image-openai/package.json
+++ b/packages/mcp-generate-image-openai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monsoft/mcp-generate-image-openai",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "MCP for generating images using OpenAI's API",
   "license": "MIT",
   "author": "Monsoft Solutions (https://monsoftsolutions.com)",
@@ -10,7 +10,9 @@
   "bin": {
     "mcp-generate-image-openai": "dist/index.js"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc && shx chmod +x dist/*.js",
     "prepare": "npm run build",
@@ -30,4 +32,4 @@
     "typescript": "^5.6.2",
     "shx": "^0.3.4"
   }
-} 
+}
