--- a/packages/mcp-generate-image-openai/package.json
+++ b/packages/mcp-generate-image-openai/package.json
@@ -26,7 +26,8 @@
     "zod-to-json-schema": "^3.23.5",
     "yargs": "^17.7.2",
     "openai": "^4.97.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "imagekit": "^4.1.4"
   },
   "devDependencies": {
     "typescript": "^5.6.2",
